<resources>
    <string name="app_name">Geconp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_receita">Receita</string>
    <string name="title_activity_despesa">Despesa</string>
    <string name="title_activity_categoria">Categoria</string>
    <string name="title_activity_conta">Conta</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_grafico">Grafico</string>
    <string name="title_activity_poupanca">Poupanca</string>
    <string name="title_activity_orcamento">Orcamento</string>
    <string name="mensagem">Adicionado com sucesso!!</string>
    <string name="title_activity_saldo">Saldo</string>
    <string name="title_activity_lista_orcamento">ListaOrcamentoActivity</string>
    <string name="campoVazioMeta">Preencha o campo Meta OrÃ§amentÃ¡ria</string>
    <string name="campoVazio">Preencha todos os campos!</string>
    <string name="comboCategoria">Categorias</string>
    <string name="campoVazioCategoria">Preencha o campo nome!</string>
    <string name="comboConta">Selecione a Conta</string>
    <string name="title_activity_adicionar_poupanca">Adicionar Poupanca</string>
    <string name="banco">Banco</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="msg_cadastrar">Cadastrado com sucesso!</string>
    <string name="adicionar">Salvar</string>
    <string name="add_cat">Adicionar Categoria</string>
    <string name="add_conta">Adicionar Conta</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome">Nome</string>
    <string name="tipo">Categoria</string>
    <string name="saldo">Saldo</string>
    <string name="limite">Limite</string>
    <string name="descricao">DescriÃ§Ã£o</string>
    <string name="conta">Conta</string>
    <string name="meta">Meta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="bandeira">Bandeira</string>
    <string name="checkMeta">PrÃ³ximos 3 meses</string>
    <string name="title_activity_lancar_receita">Lancar Receita</string>
    <string name="title_activity_lancar_despesa">Lancar Despesa</string>
    <string name="title_activity_historico">Historico</string>
    <string name="title_activity_listar_poupanca">Listar Poupanca</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_confirmacao">Confirmar</string>
    <string name="title_activity_depositar_poupanca">Depositar Poupanca</string>
    <string name="mensagem_deposito">Depositado com Sucesso!</string>
    <string name="title_activity_retirar_poupanca">Retirar Poupanca</string>
    <string name="mensagem_retirar">Retirado com sucesso!</string>
    <string name="title_activity_cartao">Cartao</string>
    <string name="title_activity_cadastrar_cartao">CadastrarCartaoActivity</string>
    <string name="title_activity_listar_cartao">ListarCartaoActivity</string>
    <string name="title_activity_confirmar_cartao">ConfirmaÃ§Ã£o</string>
    <string name="title_activity_comprar_cartao">"Comprar com Cartao "</string>
    <string name="mensagem_comprar_cartao">Comprado com sucesso!</string>
    <string name="title_activity_pagar_cartao">Pagar Cartao</string>
    <string name="mensagem_pagar_cartao">Pago com Sucesso!</string>
    <string name="exclusao">ExcluÃ­do com sucesso!</string>
    <string name="menu_contexto_exclusao">Excluir</string>
    <string name="menu_contexto_lancar">LanÃ§ar</string>
    <string name="fatura">Fatura</string>
    <string name="comprar">Comprar</string>
    <string name="depositar">Depositar</string>
    <string name="pagar">Pagar</string>
    <string name="retirar">Retirar</string>
    <string name="receitas">Receitas</string>
    <string name="despesas">Despesas</string>
    <string name="title_activity_historico_poupanca">Historico Poupanca</string>
    <string name="menu_poupanca_deposito">Depositar</string>
    <string name="menu_poupanca_excluir">Excluir</string>
    <string name="menu_poupanca_sacar">Sacar</string>
    <string name="menu_cartao_comprar">Comprar com CartÃ£o</string>
    <string name="menu_cartao_excluiir">Excluir</string>
    <string name="menu_cartao_pagar">Pagar CartÃ£o</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_listagem_deposito">Listagem Deposito</string>
    <string name="title_activity_hist_deposito">HistDepositoActivity</string>
    <string name="title_activity_hist_retirado">HistRetiradoActivity</string>
    <string name="title_activity_hist_compra_cartao">HistCompraCartaoActivity</string>
    <string name="title_activity_hist_pagar_cartao">HistPagarCartaoActivity</string>
    <string name="title_activity_historico_cartao">HistoricoCartaoActivity</string>
    <string name="title_activity_contas_receber">ContasReceberActivity</string>
    <string name="title_activity_tela_con_receber">Contas a Receber</string>
    <string name="menu_contexto_con_adicionar">Adicionar Nova Conta</string>
    <string name="menu_contexto_con_Excluir">Excluir</string>
    <string name="menu_contexto_con_Atualizar">Editar</string>
    <string name="menu_contexto_con_lancar">Confirmar Recebimento</string>
    <string name="menu_cont_pag_lancar">Confirmar Pagamento</string>
    <string name="title_activity_atualizar_receita">Atualizar Receita</string>
    <string name="mensagem_atualizar">Editado com Sucesso!</string>
    <string name="title_activity_tela_con_pagar">Contas a Pagar</string>
    <string name="title_activity_contas_pagar">Contas a Pagar</string>
    <string name="title_activity_atualizar_despesa">Atualizar Despesa</string>
    <string name="title_activity_adicionar_lan_rece">Adicionar LanÃ§amento</string>
    <string name="title_activity_adicionar_lan_des">Adicionar LanÃ§amento</string>
    <string name="title_activity_busca_receita">BuscaReceitaActivity</string>
    <string name="title_activity_busca_despesa">Busca Despesa</string>
    <string name="title_activity_att_mov_receita">Editar Recebimento</string>
    <string name="title_activity_att_mov_despesa">Editar Movimento</string>
    <string name="monday">SEG</string>
    <string name="tuesday">TER</string>
    <string name="wednesday">QUA</string>
    <string name="thursday">QUI</string>
    <string name="friday">SEX</string>
    <string name="saturday">SAB</string>
    <string name="sunday">DOM</string>
    <string name="cuidado">Cuidado!</string>
    <string name="add_sucesso">Salvo com Sucesso!</string>
    <string name="title_activity_calendario">CalendarioActivity</string>
</resources>
