<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.geconp.geconp.DespesaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:id="@+id/textView6"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextValorDespesa"
        android:text=".00"
        android:inputType="phone"
        android:numeric="decimal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:id="@+id/textView7"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="@dimen/width_edit_text"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:maxLength="15"
        android:ems="10"
        android:id="@+id/editTextDataDespesa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:id="@+id/textView8"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDescricaoDespesa"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:id="@+id/textView9"
        android:textColor="@android:color/black"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTipoDespesa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conta"
        android:id="@+id/textView10"
        android:textColor="@android:color/black"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerContaDespesa" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar"
            android:id="@+id/buttonAddDespesa"
            android:background="#ff3e2aff"
            android:textColor="#ffffffff"
            android:layout_marginTop="20dp"
            android:width="@dimen/largura" />
    </LinearLayout>
</LinearLayout>
