<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.geconp.geconp.ReceitaActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:id="@+id/textViewListPouBanco"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextValor"
        android:singleLine="true"
        android:numeric="decimal"
        android:inputType="phone"
        android:text=".00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:id="@+id/textViewListPouValor"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="@dimen/width_edit_text"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDataReceita"
        android:singleLine="true"
        android:inputType="date"
        android:maxLength="15"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:id="@+id/textViewListPouData"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDescricao"
        android:singleLine="true"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:id="@+id/textViewSaldoReceita"
        android:textColor="@android:color/black"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTipo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conta"
        android:id="@+id/textViewSaldoDespesa"
        android:textColor="@android:color/black"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerConta" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar"
            android:id="@+id/buttonAddReceita"
            android:background="#ff3e2aff"
            android:textColor="#ffffffff"
            android:layout_marginTop="20dp"
            android:width="@dimen/largura" />
    </LinearLayout>

</LinearLayout>
