<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.geconp.geconp.CadastrarCartaoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:id="@+id/textView3"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextValorCartao"
        android:text=".00"
        android:inputType="phone"
        android:numeric="decimal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:id="@+id/textView67"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDescCartao"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bandeira"
        android:id="@+id/textView4"
        android:textColor="@android:color/black"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCartao" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limite"
        android:id="@+id/textView5"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLimiteCartao"
        android:text=".00"
        android:inputType="phone"
        android:numeric="decimal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fatura"
        android:id="@+id/textView16"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="@dimen/width_edit_text"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFaturaCartao"
        android:maxLength="15"
        android:inputType="date"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data Vencimento"
        android:id="@+id/txtDataVenc"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="@dimen/width_edit_text"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDataVenCartao"
        android:inputType="date"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:id="@+id/buttonAddCartao"
            android:background="#ff3e2aff"
            android:textColor="#ffffffff"
            android:layout_marginTop="20dp"
            android:width="@dimen/largura"/>
    </LinearLayout>
</LinearLayout>
